# ocaml-rtmidi

./: dune-project  ocaml-rtmidi-lwt.opam  ocaml-rtmidi.opam
bindings/: build_rtmidi.sh  dune  ocaml_rtmidi_bindings.ml  rtmidi_bindings.ml
config/: dune  ocaml_rtmidi_discover.ml  rtmidi_discover.ml
example/: dune  ocaml_rtmidi_example.ml  rtmidi_example.ml
gen_code/: dune  ocaml_rtmidi_gen_code.ml  rtmidi_gen_code.ml
gen_types/: dune  ocaml_rtmidi_gen_types.ml  rtmidi_gen_types.ml
lwt/: dune  ocaml_rtmidi_lwt.ml  rtmidi_lwt.ml
src/: dune  ocaml_rtmidi.ml  ocaml_rtmidi.mli  rtmidi.ml  rtmidi.mli
types/: dune  ocaml_rtmidi_types.ml
