(library
 (name rtmidi)
 (libraries ctypes ctypes.foreign rtmidi_types rtmidi_bindings)
 (foreign_stubs
  (language c)
  (names rtmidi_generated_stubs)
  (flags (-O0)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (public_name ocaml-rtmidi))

(rule
 (targets rtmidi_generated_stubs.ml)
 (deps ../gen_code/rtmidi_gen_code.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} ml))))

(rule
 (targets rtmidi_generated_stubs.c)
 (deps ../gen_code/rtmidi_gen_code.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} c))))

(rule
 (targets c_library_flags.sexp)
 (deps ../config/c_library_flags.sexp)
 (action
  (copy %{deps} %{targets})))
